--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+uploads/
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,linux
 
