--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "module": "streamlit",
             "args": [
                 "run",
-                "${file}",
+                "app/main.py",
                 "--server.port",
                 "2000"
             ]
